# rust-embedded-graphics-cjk

./: Cargo.toml  README.md
examples/: Cargo.toml
examples/examples/: simulated_display.rs
font-build-tool/: Cargo.toml
font-build-tool/src/: builder.rs  error.rs  lib.rs  unicode.rs
font-fusion-pixel/: Cargo.toml  Makefile  build.rs
font-fusion-pixel/src/: fusion_pixel_12.rs  fusion_pixel_24.rs  lib.rs
font-noto/: Cargo.toml  Makefile  NOTO_SANS_VERSION  build.rs
font-noto/src/: lib.rs  noto_sans_mono_cjk_sc_regular_24.rs  noto_sans_mono_cjk_sc_regular_36.rs  noto_sans_mono_sc_regular_24.rs  noto_sans_mono_sc_regular_32.rs  noto_sans_mono_sc_regular_36.rs
font-sarasa-gothic/: Cargo.toml  Makefile  SARASA_VERSION  build.rs
font-sarasa-gothic/src/: lib.rs  sarasa_mono_sc_light_24.rs  sarasa_mono_sc_light_32.rs  sarasa_mono_sc_light_36.rs  sarasa_mono_slab_sc_light_24.rs
font-zpix/: Cargo.toml  Makefile  build.rs
font-zpix/src/: lib.rs  zpix_12.rs  zpix_24.rs  zpix_36.rs
glyph-mapping/: Cargo.toml
glyph-mapping/src/: lib.rs
