[package]
name                        = "embedded-graphics-cjk-examples"
version                     = "0.1.0"
authors                     = ["Ferris Tseng <ferristseng@fastmail.fm>"]
edition                     = "2021"
repository                  = ""

[dev-dependencies]
embedded-graphics           = "0.7"
embedded-graphics-simulator = "0.3"

[dev-dependencies.embedded-graphics-cjk-font-fusion-pixel]
version                     = "0.1"
path                        = "../font-fusion-pixel"

[dev-dependencies.embedded-graphics-cjk-font-sarasa-gothic]
version                     = "0.1"
path                        = "../font-sarasa-gothic"

[dev-dependencies.embedded-graphics-cjk-font-noto]
version                     = "0.1"
path                        = "../font-noto"

[dev-dependencies.embedded-graphics-cjk-font-zpix]
version                     = "0.1"
path                        = "../font-zpix"

[patch.crates-io]
embedded-graphics           = { path = "../../embedded-graphics" }