[package]
name                    = "embedded-graphics-cjk-font-fusion-pixel"
version                 = "0.1.0"
authors                 = ["Ferris Tseng <ferristseng@fastmail.fm>"]
edition                 = "2021"
repository              = "https://github.com/ferristseng/rust-embedded-graphics-cjk"

[dependencies]
embedded-graphics       = "0.7"

[dependencies.embedded-graphics-cjk-glyph-mapping]
version                 = "0.1"
path                    = "../glyph-mapping"
